# SoftRenderer

./: CMakeLists.txt  TODO.md  main.cpp
.VSCodeCounter/2024-05-20_20-01-48/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-20_20-02-13/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-20_20-04-18/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-27_15-47-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-05_19-34-32/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: Color.hpp  Scene.hpp  Singleton.hpp  ui.hpp
include/component/: Component.hpp  Mesh.hpp  MeshRenderer.hpp  Renderer.hpp  Transform.hpp
include/gameobject/: Camera.hpp  GameObject.hpp  Light.hpp
include/math/: MathUtil.hpp  Matrix.hpp  MinHeap.hpp  OcTree.hpp  Vector.hpp
include/pipeline/: ApplicationStage.hpp  Buffer.hpp  GeometricStage.hpp  RasterizationStage.hpp  RenderPipeline.hpp
include/shader/: Shader.hpp  ShaderData.hpp
src/: Color.cpp  Scene.cpp  ui.cpp
src/component/: Component.cpp  Mesh.cpp  MeshRenderer.cpp  Renderer.cpp  Transform.cpp
src/gameobject/: Camera.cpp  GameObject.cpp  Light.cpp
src/math/: MathUtil.cpp  MinHeap.cpp
src/pipeline/: ApplicationStage.cpp  Buffer.cpp  (+3 more)
(+1 files in other folders)
